--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,19 +1,16 @@
 {
   "editor.formatOnSave": true,
+  "editor.minimap.enabled": false,
   "editor.rulers": [88, 120],
   "files.insertFinalNewline": true,
   "files.trimFinalNewlines": true,
   "files.trimTrailingWhitespace": true,
-  "workbench.colorTheme": "Oceanic Next (dimmed bg)",
-  "workbench.iconTheme": "vscode-icons",
-  "workbench.productIconTheme": "material-product-icons",
+  "python.formatting.blackPath": "black",
+  "python.formatting.provider": "black",
   "python.linting.pylintEnabled": true,
   "python.linting.pylintPath": "pylint",
-  "python.formatting.provider": "black",
-  "python.formatting.blackPath": "black",
-  "[python]": {
-    "editor.defaultFormatter": "ms-python.python"
-  },
-  "editor.minimap.enabled": false,
-  "workbench.editor.enablePreview": false
+  "workbench.colorTheme": "Oceanic Next (dimmed bg)",
+  "workbench.editor.enablePreview": false,
+  "workbench.iconTheme": "vscode-icons",
+  "workbench.productIconTheme": "material-product-icons"
 }
