--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-boto3==1.20.9
+boto3==1.20.10
 dj-database-url==0.5.0
 django-environ==0.8.1
 Django==3.2.9
-folium==0.12.1
+folium==0.12.1.post1
 gunicorn==20.1.0
 psycopg2==2.9.2
 requests==2.26.0
