--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
+  "editor.bracketPairColorization.enabled": true,
   "editor.formatOnSave": true,
+  "editor.guides.bracketPairs": "active",
   "editor.minimap.enabled": false,
   "editor.rulers": [88, 120],
   "files.insertFinalNewline": true,
@@ -15,5 +17,5 @@
   "workbench.productIconTheme": "material-product-icons",
   "[html]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
+  }
 }
